@@ -846,14 +846,14 @@ c(test.num.copy, round(opt.C))[i], prior.K, mapping.bias.ok, seg.id, min.variant
 .calcPuritySomaticVariants <- function(vcf, prior.somatic, tumor.id.in.vcf) {
     median(unlist(geno(vcf[prior.somatic > 0.5])$FA[, tumor.id.in.vcf]), na.rm = TRUE)/0.48
 }
+.robustSd <- function(d, size = 25) median(
+sapply(split(d, ceiling(seq_along(d) / size)), sd, na.rm = TRUE), 
+na.rm = TRUE)
 .createFakeLogRatios <- function(tumor, seg.file, sampleid, chr.hash, 
     model.homozygous=FALSE, max.logr.sdev) {
     if (!is.null(tumor$log.ratio)) {
          # calculate log.ratio sd in chunks of size 25 to estimate the 
          # segmented sd
-         .robustSd <- function(d, size = 25) median(
-            sapply(split(d, ceiling(seq_along(d) / size)), sd, na.rm = TRUE), 
-            na.rm = TRUE)
 
         if (.robustSd(tumor$log.ratio) < max.logr.sdev) {
             flog.info("Found log2-ratio in tumor coverage data.")
